<resources>
    <string name="app_name">My Github User</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="company">company</string>
    <string name="location">location</string>
    <string name="repository">repository</string>
    <string name="follower">follower</string>
    <string name="following">following</string>
    <string name="icon_follower">Icon Follower</string>
</resources>