<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="16dp">

<!--    <com.microdevrj.superellipse.custom_superellipse_views.SuperellipseImageView-->
<!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--        android:id="@+id/img_photo"-->
<!--        android:layout_width="110dp"-->
<!--        android:layout_height="110dp"-->
<!--        android:padding="64dp"-->
<!--        app:colorFill="#867171"-->
<!--        app:paintStyle="fill"-->
<!--        app:strokeWidth="6dp"/>-->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:src="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/img_photo">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/username" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/round_group_24"
                android:layout_marginRight="4dp"
                android:contentDescription="@string/icon_follower" />

            <TextView
                android:id="@+id/tv_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginEnd="8dp"
                android:text="@string/follower" />
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/round_group_add_24"
                android:layout_marginRight="4dp"
                android:contentDescription="@string/icon_follower" />
            <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="12sp"
                android:text="@string/following" />
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/round_folder_24"
                android:layout_marginRight="4dp"
                android:contentDescription="@string/icon_follower" />
            <TextView
                android:id="@+id/tv_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/repository" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="12sp"
            android:text="@string/company" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/location" />
    </LinearLayout>
</LinearLayout>