<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    android:paddingTop="64dp"
    app:cardCornerRadius="16dp"
    android:layout_margin="16dp"
android:layout_centerInParent="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rl_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_launcher_background" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_detail"
        android:layout_marginTop="16dp"
        android:layout_below="@id/rl_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/username"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/company" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/location" />

    </LinearLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/ll_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_icon_follower"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:src="@drawable/round_group_24"
                android:contentDescription="@string/icon_follower" />

            <TextView
                android:layout_below="@id/img_icon_follower"
                android:id="@+id/tv_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp">
            <ImageView
                android:id="@+id/img_icon_following"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:src="@drawable/round_group_add_24"
                android:contentDescription="@string/icon_follower" />

            <TextView
                android:layout_below="@id/img_icon_following"
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_icon_repository"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:src="@drawable/round_folder_24"
                android:contentDescription="@string/icon_follower" />

            <TextView
                android:layout_below="@id/img_icon_repository"
                android:id="@+id/tv_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>